cmake_minimum_required(VERSION 3.9)
project(lnconfig VERSION 1.0)
find_package(jsoncpp)
include_directories(./include)
# add_executable(ln_config main.cpp)
set(DIR_SRCS ./src/lnconfig.cpp)
add_library(ln_config SHARED ${DIR_SRCS})
target_include_directories(ln_config PUBLIC .)
set_target_properties(ln_config PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/lnconfig.h)