cmake_minimum_required(VERSION 3.9)
project(lninsertredis VERSION 1.0)
find_package(HIREDIS)
# add_executable(ln_insertredis main.cpp)
include_directories(./include ../lnconfig/include)
# add_subdirectory(../lnconfig)
set(DIR_SRCS ./src/lninsertredis.cpp)
add_library(ln_insertredis SHARED ${DIR_SRCS})
target_include_directories(ln_insertredis PUBLIC .)
set_target_properties(ln_insertredis PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/lninsertredis.h)
# target_link_libraries(ln_insertredis ln_config)